--- a/MvcMusicStore/MvcMusicStore/Views/ProductSearch/SearchProduct.cshtml
+++ b/MvcMusicStore/MvcMusicStore/Views/ProductSearch/SearchProduct.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MvcMusicStore.Utilities.DatabaseUtilities.Product>
+﻿@model IEnumerable<MvcMusicStore.Utilities.DatabaseUtilities.Produs>
 
 @using (Html.BeginForm("SearchProduct", "ProductSearch", FormMethod.Get))
 {
@@ -12,18 +12,18 @@
     {
         <div class="product">
             <div class="product-title">
-                <h3>@item.Description</h3>
+                <h3>@item.Pret</h3>
                 <span class="image-wrapper">
                     <img src="http://www.austria.ro/blog/wp-content/themes/Ciola/library/images/thumbnail-600x350.png" alt="Alternate Text" class="image" />
                 </span>
             </div>
             <div class="product-details">
                 <div class="price">
-                    @item.Price
+                    @item.Pret
                 </div>
                 <br />
                 <span class="price-evolution">
-                    <img src="@Url.Action("LineChart", "MyProducts", new { productID = item.Id})" alt="Chart" />
+                    <img src="@Url.Action("LineChart", "MyProducts", new {productID = item.Id})" alt="Chart" />
                 </span>
             </div>
         </div>
