--- a/MvcMusicStore/MvcMusicStore/Views/Shared/_Layout.cshtml
+++ b/MvcMusicStore/MvcMusicStore/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>@ViewBag.Title - My ASP.NET Application</title>
+	<title>@ViewBag.Title</title>
 	<link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
 	<link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
 	<link href="~/Content/CustomCSS.css" rel="stylesheet" type="text/css" />
@@ -34,7 +34,7 @@
 		@RenderBody()
 		<hr />
 		<footer>
-			<p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+			
 			<ul class="dropdown-menu">
 				<li><a href="#">Action</a></li>
 				<li><a href="#">Another action</a></li>
