--- a/MvcMusicStore/MvcMusicStore/Views/Shared/_Layout.cshtml
+++ b/MvcMusicStore/MvcMusicStore/Views/Shared/_Layout.cshtml
@@ -13,17 +13,19 @@
 <body>
 	<div class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-				@Html.ActionLink("My Products", "MyProducts", "MyProducts", new { area = "" }, new { @class = "navbar-brand" });
-				@Html.ActionLink("Seach Product", "ProductSearch", "ProductSearch", new { area = "" }, new { @class = "navbar-brand" });
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                @Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("My Products", "MyProducts", "MyProducts", new { area = "" }, new { @class = "navbar-brand" });
+                @Html.ActionLink("Seach Product", "ProductSearch", "ProductSearch", new { area = "" }, new { @class = "navbar-brand" });
+                @Html.ActionLink("Login", "LoginHome", "Login", new { area = "" }, new { @class = "navbar-brand" });
 
-			</div>
+
+            </div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav"></ul>
 			</div>
