added new functionalities

--- a/MvcMusicStore/MvcMusicStore/Views/MyProducts/MyProducts.cshtml
+++ b/MvcMusicStore/MvcMusicStore/Views/MyProducts/MyProducts.cshtml
@@ -13,7 +13,7 @@
             <div class="product-title">
                 <h3>@item.Denumire</h3>
                 <span class="image-wrapper">
-                    <img src="http://www.austria.ro/blog/wp-content/themes/Ciola/library/images/thumbnail-600x350.png" alt="Alternate Text" class="image" />
+                    <img src=@item.Url_Imagine alt="Alternate Text" class="image" />
                 </span>
             </div>
             <div class="product-details">
@@ -26,6 +26,5 @@
                 </span>
             </div>
         </div>
-
     }
 </div>
