--- a/MvcMusicStore/MvcMusicStore/Views/ProductSearch/SearchProduct.cshtml
+++ b/MvcMusicStore/MvcMusicStore/Views/ProductSearch/SearchProduct.cshtml
@@ -6,34 +6,41 @@
 }
 
 
- <div id="products-wrapper">
+ <div id="products-wrapper container">
 
      @foreach (var item in Model)
      {
-     <div class="product" id="product-@item.Id" style="height:500px;">
-         <div class="product-details" style="max-width:40%">
-             <div class="product-title" >@item.Denumire</div>
-             <div class="product-image">
-                 <img src="@item.Url_Imagine" />
+     <div class="product row" id="product-@item.Id">
+         <div class="col-lg-5">
+             <div class="product-details">
+                 <h4 class="product-title">@item.Denumire</h4>
+                 <div class="product-image">
+                     <img src="@item.Url_Imagine" />
+                 </div>
              </div>
-             <div class="product-price">@string.Format("{0} lei", item.Pret)</div>
          </div>
-         <div class="price-evolution" >
-             <span class="price-evolution">
-                 <img src="@Url.Action("LineChart", "ProductSearch", new {productID = item.Id})" alt="Chart" style="max-width:30%"/>
-             </span>
+         <div class="col-lg-4">
+             <div class="price-evolution">
+                 <span class="price-evolution">
+                     <img style="width: 80%;" src="@Url.Action("LineChart", "ProductSearch", new {productID = item.Id})" alt="Chart" />
+                 </span>
+             </div>
+             <h3 class="product-price w-100" style="text-align: center;">@string.Format("{0} lei", item.Pret)</h3>
+         </div> 
+         <div class="col-lg-3 pull-right">
+             <div class="retailer">
+                 <div class="retailer-name">
+                     @* <h4>@item.Vanzator.Nume</h4>*@
+                 </div>
+
+                 @using (Html.BeginForm("FollowProduct", "ProductSearch", new { @productId = item.Id }, FormMethod.Post))
+                 {
+                     <input class="btn btn-info" type="submit" value="Urmareste Produs" />
+                 }
+             </div>
          </div>
      </div>
-     <div class="retailer">
-         <div class="retailer-name">
-            @* <h4>@item.Vanzator.Nume</h4>*@
-         </div>
-         
-         @using (Html.BeginForm("FollowProduct", "ProductSearch",new { @productId = item.Id}, FormMethod.Post))
-         {
-             <input type="submit" value="Urmareste Produs"/>
-         }
-     </div>
+  
 
 
 
