further development ... search options

--- a/MvcMusicStore/MvcMusicStore/Views/MyProducts/MyProducts.cshtml
+++ b/MvcMusicStore/MvcMusicStore/Views/MyProducts/MyProducts.cshtml
@@ -5,26 +5,48 @@
 }
 <h3>My products</h3>
 </br>
-<div id="products-wrapper">
+<div id="products-wrapper container">
+
 
     @foreach (var item in Model)
     {
-        <div class="product">
-            <div class="product-title">
-                <h3>@item.Denumire</h3>
-                <span class="image-wrapper">
-                    <img src=@item.Url_Imagine alt="Alternate Text" class="image" />
-                </span>
-            </div>
-            <div class="product-details">
-                <div class="price">
-                    @item.Pret
+        <div class="product row" id="product-@item.Id">
+            <div class="col-lg-5">
+                <div class="product-details">
+                    <h4 class="product-title">@item.Denumire</h4>
+                    <div class="product-image">
+                        <img src="@item.Url_Imagine" />
+                    </div>
                 </div>
-                <br />
-                <span class="price-evolution">
-                    <img src="@Url.Action("LineChart", "MyProducts", new { productID = item.Id})" alt="Chart" />
-                </span>
+            </div>
+            <div class="col-lg-4">
+                <div class="price-evolution">
+                    <span class="price-evolution">
+                        <img style="width: 80%;" src="@Url.Action("LineChart", "ProductSearch", new {productID = item.Id})" alt="Chart" />
+                    </span>
+                </div>
+                <h3 class="product-price w-100" style="text-align: center;">@string.Format("{0} lei", item.Pret)</h3>
+            </div>
+            <div class="col-lg-3 pull-right">
+                <div class="retailer">
+                    <div class="retailer-name">
+                        <h4>@item.Vanzator.Nume</h4>
+                    </div>
+                    <div class="retailer-image">
+                        <img src="@string.Format("https://prslicstorage.blob.core.windows.net/logos/{0}.png",item.Vanzator.Nume)" />
+                    </div>
+
+                    @using (Html.BeginForm("FollowProduct", "ProductSearch", new { @productId = item.Id }, FormMethod.Post))
+                    {
+                        <input class="btn btn-info" type="submit" value="Urmareste Produs" />
+                    }
+                </div>
             </div>
         </div>
+
+
+
+
+
     }
 </div>
