--- a/MvcMusicStore/MvcMusicStore/Views/ProductSearch/ProductSearch.cshtml
+++ b/MvcMusicStore/MvcMusicStore/Views/ProductSearch/ProductSearch.cshtml
@@ -8,9 +8,9 @@
     @Html.TextBox("search")<input type="submit" name="submit" value="Search" />
 
     <lable>Filtru cautare :</lable>
-    <label>@Html.RadioButton("opt_radio", "relevance") RELEVANTA</label>
+    <label>@Html.RadioButton("opt_radio", "relevance",true) RELEVANTA</label>
     <label>@Html.RadioButton("opt_radio", "price-asc") PRET CRESCATOR</label>
-    <label>@Html.RadioButton("opt_radio", "price-desc") PRET DRESCATOR</label>
+    <label>@Html.RadioButton("opt_radio", "price-desc") PRET DESCRESCATOR</label>
 
 
 
