--- a/MvcMusicStore/MvcMusicStore/Views/ProductSearch/SearchProduct.cshtml
+++ b/MvcMusicStore/MvcMusicStore/Views/ProductSearch/SearchProduct.cshtml
@@ -5,9 +5,9 @@
 
     @Html.TextBox("search")<input type="submit" name="submit" value="Search" />
     <lable>Filtru cautare :</lable>
-    <label>@Html.RadioButton("opt_radio", "relevance") RELEVANTA</label>
+    <label>@Html.RadioButton("opt_radio", "relevance",true) RELEVANTA</label>
     <label>@Html.RadioButton("opt_radio", "price-asc") PRET CRESCATOR</label>
-    <label>@Html.RadioButton("opt_radio", "price-desc") PRET DRESCATOR</label>
+    <label>@Html.RadioButton("opt_radio", "price-desc") PRET DESCRESCATOR</label>
 
 
 
@@ -15,7 +15,15 @@
 
 
     <div id="products-wrapper container">
-        
+
+        @using (Html.BeginForm("OrderProducts", "ProductSearch", FormMethod.Post))
+        {
+            <label>@Html.RadioButton("sort_opt", "price-asc") PRET CRESCATOR</label>
+            <label>@Html.RadioButton("sort_opt", "price-desc") PRET DESCRESCATOR</label>
+            <label>@Html.RadioButton("sort_opt", "retailer-asc") VANZATOR CRESCATOR</label>
+            <label>@Html.RadioButton("sort_opt", "retailer-desc") VANZATOR DESCRESCATOR</label>
+            <input type="submit" value="Sorteaza" />
+        }
 
         @foreach (var item in Model)
         {
