--- a/MvcMusicStore/MvcMusicStore/Views/ProductSearch/SearchProduct.cshtml
+++ b/MvcMusicStore/MvcMusicStore/Views/ProductSearch/SearchProduct.cshtml
@@ -30,7 +30,7 @@
             <div class="product row" id="product-@item.Id">
                 <div class="col-lg-5">
                     <div class="product-details">
-                        <h4 class="product-title">@item.Denumire</h4>
+                        <h4 class="product-title">@WebUtility.HtmlDecode(item.Denumire)</h4>
                         <div class="product-image">
                             <img src="@item.Url_Imagine" />
                         </div>
